<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="visible"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <com.toketamas.tictactoe.GraphicView
        android:id="@+id/graphicView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:onClick="onClickBtn"
        android:text="@string/new_game"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/graphicView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_level"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/levelLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/author"
        app:layout_constraintBottom_toBottomOf="@+id/graphicView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/levelLayout"
        android:layout_width="329dp"
        android:layout_height="42dp"
        android:layout_marginBottom="32dp"
        android:saveEnabled="false"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textViewAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/Level1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="#FFFFFF"
            android:backgroundTint="#8BC34A"
            android:onClick="onClikLevelTxtFields"
            android:padding="5dp"
            android:text="@string/level_1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Level2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#CDDC39"
            android:onClick="onClikLevelTxtFields"
            android:padding="5dp"
            android:text="@string/level_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Level3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F7FF00"
            android:backgroundTint="#F7FF00"
            android:backgroundTintMode="add"
            android:onClick="onClikLevelTxtFields"
            android:padding="5dp"
            android:text="@string/level_3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Level4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#FFA522"
            android:onClick="onClikLevelTxtFields"
            android:padding="5dp"
            android:text="@string/level_4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Level5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#F48484"
            android:onClick="onClikLevelTxtFields"
            android:padding="5dp"
            android:text="@string/level_5"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>